--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-validator": "^6.9.2",
+    "googleapis": "^39.2.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.11.15"
+    "mongoose": "^5.11.15",
+    "multer": "^1.4.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
